--- a/frontend/shared/scss/base/variables.scss
+++ b/frontend/shared/scss/base/variables.scss
@@ -73,8 +73,8 @@ $color-primary-background: var(--color-primary-background, #{changeHue($color-pr
 $color-primary-dark: var(--color-primary-dark, #{changeHue($color-primary-dark-original, $color-primary-hue)});
 $color-primary-gray-light: var(--color-primary-gray-light, #{changeHue($color-primary-gray-light-original, $color-primary-hue)});
 
-$dark-theme-color-primary-lighter: changeHueInvert($color-primary-lighter-original, $color-primary-hue, 0);
-$dark-theme-color-primary-light: changeHueInvert($color-primary-light-original, $color-primary-hue, -3);
+$dark-theme-color-primary-lighter: changeHueInvert($color-primary-lighter-original, $color-primary-hue, -8);
+$dark-theme-color-primary-light: changeHueInvert($color-primary-light-original, $color-primary-hue, -8);
 // The primary background color in dark mode should be adjusted a bit for contrast 
 // -> hence we don't invert the same color
 $dark-theme-color-primary-background: changeHueInvert($color-primary-background-original, $color-primary-hue, -8);
@@ -87,7 +87,7 @@ $dark-theme-color-primary-gray-light: changeHueInvert($color-primary-gray-light-
 
 $color-dark-original: #1e1e1e; // #000716;
 $color-dark: var(--color-dark, $color-dark-original);
-$dark-theme-color-dark: hsl(0deg, 0%, 90%);
+$dark-theme-color-dark: invertColor($color-dark-original, -8); // hsl(0deg, 0%, 90%);
 
 $color-dark-light-original: #4d4d4d;
 
@@ -100,23 +100,28 @@ $dark-theme-color-dark-light: invertColor($color-dark-light-original, -8); // hs
 
 $color-background-original: #ffffff;
 $color-background: var(--color-background, #ffffff);
-$dark-theme-color-background: black;
+$dark-theme-color-background: invertColor($color-background-original, -7);
 
 $color-background-shade-original: #f5f5f5;
 $color-background-shade: var(--color-background-shade, $color-background-shade-original);
-$dark-theme-color-background-shade: invertColor($color-background-shade-original); //hsl(#{$color-primary-hue}, 0%, 6%);
+$dark-theme-color-background-shade: invertColor($color-background-shade-original, -8);
 
 $color-background-shade-darker-original: #EBEBEB;
 $color-background-shade-darker: var(--color-background-shade-darker, $color-background-shade-darker-original);
-$dark-theme-color-background-shade-darker: invertColor($color-background-shade-darker-original); //hsl(#{$color-primary-hue}, 0%, 14%);
+$dark-theme-color-background-shade-darker: invertColor($color-background-shade-darker-original, -8); //hsl(#{$color-primary-hue}, 0%, 14%);
 
 // Used for segmented control in dark mode: instead of darker, it should become lighter
 $color-background-highlight: var(--color-background-highlight, #ffffff);
 $dark-theme-color-background-highlight: hsl(#{$color-primary-hue}, 10%, 29%);
 
+// Instead of becoming lighter in dark mode, the interactive background becomes darker
 $color-background-interactive: var(--color-background-interactive, #ffffff);
-$dark-theme-color-background-interactive: black;
+$dark-theme-color-background-interactive: invertColor(#ffffff, 0);
 
+$color-background-lighter: var(--color-background-lighter, #ffffff);
+$color-background-lighter-shade: var(--color-background-lighter-shade, #f5f5f5);
+$dark-theme-color-background-lighter: invertColor(#ffffff, 0);
+$dark-theme-color-background-lighter-shade: invertColor(#ffffff, -8);
 
 // -----------------------------------------------------------------------------
 // -------- Primary contrast  --------------------------------------------------
@@ -192,7 +197,7 @@ $dark-theme-color-gray-1: invertColor($color-gray-original, -8); //hsl(color.hue
 
 $color-gray-2-original: #D1D1D1;
 $color-gray-2: var(--color-gray-2, $color-gray-2-original);
-$dark-theme-color-gray-2: invertColor($color-gray-2-original, -8); //hsl(color.hue($color-gray-2-original), color.saturation($color-gray-2-original), calc(100% - #{color.lightness($color-gray-2-original)}));
+$dark-theme-color-gray-2: invertColor($color-gray-2-original, 0); //hsl(color.hue($color-gray-2-original), color.saturation($color-gray-2-original), calc(100% - #{color.lightness($color-gray-2-original)}));
 
 $color-gray-3-original: #E5E5E5;
 $color-gray-3: var(--color-gray-3, $color-gray-3-original);
@@ -309,15 +314,15 @@ $dark-theme-color-input-shadow: rgba(255, 255, 255, 0.15);
 
 $color-side-view-shadow-original: rgba(0, 0, 0, 0.1);
 $color-side-view-shadow: var(--color-side-view-shadow, $color-side-view-shadow-original);
-$dark-theme-color-side-view-shadow: rgba(255, 255, 255, 0.1);
+$dark-theme-color-side-view-shadow: rgba(0, 0, 0, 0.2);
 
 $color-overlay-shadow-original: rgba(0, 0, 0, 0.1);
 $color-overlay-shadow: var(--color-overlay-shadow, $color-overlay-shadow-original);
-$dark-theme-color-overlay-shadow: rgba(255, 255, 255, 0.1);
+$dark-theme-color-overlay-shadow: rgba(255, 255, 255, 0.05);
 
 $color-box-shadow-original: rgba(0, 0, 0, 0.05);
 $color-box-shadow: var(--color-box-shadow, $color-box-shadow-original);
-$dark-theme-color-box-shadow: rgba(255, 255, 255, 0.55);
+$dark-theme-color-box-shadow: rgba(255, 255, 255, 0.05);
 
 $color-current-background: var(--color-current-background, #{$color-background});
 
@@ -353,7 +358,7 @@ $color-current-background: var(--color-current-background, #{$color-background})
 
 @mixin dark-modus {
     // Reduce color a little bit
-    --color-saturation-factor: 0.85;
+    --color-saturation-factor: 0.5;
     --color-background: #{$dark-theme-color-background};
     --color-background-shade: #{$dark-theme-color-background-shade};
     --color-background-shade-darker: #{$dark-theme-color-background-shade-darker};
@@ -364,6 +369,9 @@ $color-current-background: var(--color-current-background, #{$color-background})
     --color-gray-2: #{$dark-theme-color-gray-2};
     --color-gray-3: #{$dark-theme-color-gray-3};
     --color-gray-4: #{$dark-theme-color-gray-4};
+
+    --color-background-lighter: #{$dark-theme-color-background-lighter};
+    --color-background-lighter-shade: #{$dark-theme-color-background-lighter-shade};
 
     --color-background-highlight: #{$dark-theme-color-background-highlight};
     --color-background-interactive: #{$dark-theme-color-background-interactive};
@@ -435,4 +443,41 @@ $color-current-background: var(--color-current-background, #{$color-background})
             box-shadow: 0 0 0 1px $color-border, 0px 10px 60px 0px $color-overlay-shadow, 0px 15px 30px 0px $color-overlay-shadow;
         }
     }
+
+    .split-view-controller {
+        &[data-has-detail="true"], &[data-has-detail="false"] {
+            >.master {
+                border-right: $border-width-thin solid $color-border;
+                background: $color-background-interactive;
+                --color-current-background: #{$color-background-lighter};
+                --color-current-background-shade: #{$color-background-lighter-shade};
+    
+                body.modern & {
+                    overflow: hidden;
+                }
+            }
+        }
+    }
+
+    .tab-bar-controller {
+        > header {
+            background: $color-background-lighter;
+            --color-current-background: #{$color-background-lighter};
+            --color-current-background-shade: #{$color-background-lighter-shade};
+        }
+    }
+
+    .st-view.shade {
+        background: $color-background-lighter;
+        --color-current-background: #{$color-background-lighter};
+        --color-current-background-shade: #{$color-background-lighter-shade};
+    }
+
+    /*.st-view.box-shade {
+        @media (min-width: 801px) and (min-height: 701px) {
+            background: $color-background-lighter;
+            --color-current-background: #{$color-background-lighter};
+            --color-current-background-shade: #{$color-background-lighter-shade};
+        }
+    }*/
 }
