Improved input description spacings

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -547,6 +547,10 @@
     > .style-tag:only-child {
         margin: 4px 0;
     }
+
+    + .st-input-box {
+        margin-top: 15px;
+    }
 }
 
 .style-price-big {
