--- a/frontend/shared/scss/layout/split-inputs.scss
+++ b/frontend/shared/scss/layout/split-inputs.scss
@@ -1,7 +1,7 @@
 .split-inputs {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 0 40px;
 
     &.option {
         margin-top: 7px
