--- a/frontend/shared/scss/components/inputs.scss
+++ b/frontend/shared/scss/components/inputs.scss
@@ -260,6 +260,10 @@ select.input {
     > div:last-child {
         padding-left: 10px;
         flex-shrink: 0;
+
+        &:first-child {
+            padding-left: 0;
+        }
     }
 
     + .st-list {
